# Seichijunrei-bot

./: .env.example  .gitignore  DEPLOYMENT.md  LOCAL_SETUP.md  LOGGING_GUIDE.md  Makefile  README.md  SPEC.md  WRITEUP.md  claude.md  health.py  pyproject.toml
.github/workflows/: ci.yml
adk_agents/seichijunrei_bot/: __init__.py  _schemas.py  agent.py  evalsete90424.evalset.json  gbc.evalset.json  hibiki.evalset.json  tools.py
adk_agents/seichijunrei_bot/_agents/: bangumi_search_agent.py  extraction_agent.py  input_normalization_agent.py  location_search_agent.py  points_filtering_agent.py  points_search_agent.py  points_selection_agent.py  route_agent.py  route_planning_agent.py  route_presentation_agent.py  transport_agent.py  user_presentation_agent.py  user_selection_agent.py  weather_agent.py
adk_agents/seichijunrei_bot/_workflows/: pilgrimage_workflow.py  route_planning_workflow.py
adk_agents/seichijunrei_bot/agents/: bangumi_search_agent.py  extraction_agent.py  location_search_agent.py  points_search_agent.py  route_agent.py  transport_agent.py  weather_agent.py
adk_agents/seichijunrei_bot/tools/: __init__.py  route_planning.py  translation.py
adk_agents/seichijunrei_bot/workflows/: pilgrimage_workflow.py
clients/: __init__.py  anitabi.py  bangumi.py
config/: settings.py
deploy/: deploy.py
docs/: ARCHITECTURE.md  adk_migration_spec.md  adk_output_schema_tools_fix.md  adk_sequential_agent_migration_plan.md  architecture.md  capstone_implementation_plan.md  troubleshooting_adk_web.md
docs/api/: anitabi.md
docs/architecture/: agent_flow.md  agent_sequence.puml  state_diagram.md
docs/archive/: IMPLEMENTATION_PLAN.md  bangumi-resolver-agent-design.md  bangumi_agent.md
docs/archive/migration_plans/: adk_bangumi_tools_refactor_plan.md
domain/: entities.py  llm_schemas.py
scripts/: start_adk_web.sh
services/: simple_route_planner.py
templates/: pdf_bangumi.html  pdf_cover.html  pdf_itinerary.html  pdf_main.html
tests/unit/: test_adk_weather_agent.py  test_bangumi_client.py  test_entities.py  test_pdf_generator.py  test_simple_route_planner.py
tools/: __init__.py  map_generator.py
utils/: __init__.py  llm.py  logger.py
